--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "notebook",
     "app"
   ],
-  "author": "Shurikation",
+  "author": "Alexander Popov",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
